# learn-opengl-cpp

./: .clang-format  .gitignore  CMakeLists.txt  \  compile_commands.json
res/shaders/: fragment.glsl  fragment_blending.glsl  fragment_depth.glsl  fragment_directional.glsl  fragment_framebuffer.glsl  fragment_model.glsl  fragment_point.glsl  fragment_single_color.glsl  fragment_spot.glsl  vertex.glsl  vertex_depth.glsl  vertex_light.glsl  vertex_model.glsl
src/: camera.cpp  camera.hpp  main.cpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  shader.cpp  shader.hpp
